Bxc 4710 thumbnails cleanup (#1808)
* BXC-4710 delete image router routes

* BXC-4710 trying to update tests

* BXC-4710 fix SetDatastreamFilter

* BXC-4710 deleting THUMBNAIL_SMALL datastream type

* BXC-4710 remove THUMBNAIL_LARGE datastream

* BXC-4710 working on destroy derivatives router test

* BXC-4710 fix destroy derivatives router without thumbnail datastreams

* BXC-4710 cleanup

* BXC-4710 remove nonbinary enhancement processor

* BXC-4710 updating enhancement router

* BXC-4710 fixing destroy derivatives and access copies services

* BXC-4710 update destroy derivatives test

* BXC-4710 adding jp2 datastreams

* BXC-4710 delete more thumbnail references